ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cluster
  namespace: monitor
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tolerations:
  - key: "key" 
    operator: "Equal" 
    value: "value" 
    effect: "NoExecute" 
    tolerationSeconds: 3600 
  rules:
  - http:
      paths:
      - path: /grafana
        backend:
          serviceName: prometheus-operator-grafana
          servicePort: 80
